add api to routers, add folder status to tasks
